Fix storing of style in Preferences add to layout cycle
Apply some intellij logger suggestions